Integrate the right way